Finished probabilistic method

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,5 @@ Author: Douglas H Phanstiel <dphansti@stanford.edu>
 Maintainer: Douglas H Phanstiel <dphansti@stanford.edu>
 Description: ChIA-PET data analysis software
 License: GPL (>= 2)
-Depends: zoo,logspline
+Depends: hash,Rcpp
 LinkingTo: Rcpp
-Imports: Rcpp
