--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,6 @@ Author: Douglas H Phanstiel <dphansti@stanford.edu>
 Maintainer: Douglas H Phanstiel <dphansti@stanford.edu>
 Description: ChIA-PET data analysis software
 License: GPL (>= 2)
-Depends: hash,Rcpp
+Depends: hash,Rcpp,optparse,R (>= 3.1.0)
 LinkingTo: Rcpp
 Packaged: 2014-07-09 19:41:18 UTC; dougphanstiel
